--- a/CSS/_bodymidle.scss
+++ b/CSS/_bodymidle.scss
@@ -3,5 +3,91 @@
     height: 100vh;
     background: var(--background-color);
     margin: auto;
-    padding: 95px 20px;
+    padding: 95px 10px;
+    // padding-top: 95px;
+
+    .slick_slider{
+        overflow: hidden;    /* ==========> Problem <=================*/
+        
+        .slider_item{
+            // margin: 10px;
+
+            .item{
+                background: #ffffff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0 15px;
+                transition: 0.4s all linear;
+            } 
+            img{
+                width: 170px;
+                height: 200px;
+                vertical-align: middle;
+                background-position: center;
+                background-size: cover;
+            }
+        }
+        .left{
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            font-size: 35px;
+            background: #525355;
+            color: var(--texttwo-color);
+            cursor: pointer;
+            position: absolute;
+            top: 35%;
+            left: -10px;
+            transform: translate(-50%);
+        }
+        .right{
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            font-size: 35px;
+            background: #525355;
+            color: var(--texttwo-color);
+            cursor: pointer;
+            position: absolute;
+            top: 35%;
+            right: -10px;
+            transform: translate(-50%);
+            align-items: center;
+        }
+        .slick-dots{
+            display: flex;
+            justify-content: center;
+            // align-items: center;
+            // margin-top: 10px;
+            position: absolute;
+            left: 50%;
+            bottom: -50px;
+            transform: translateX(-50%);
+
+            li{
+                button{
+                    font-size: 0;
+                    height: 10px;
+                    width: 10px;
+                    border-radius: 50%;
+                    border: none;
+                    margin: 0 8px;
+                    cursor: pointer;
+                }  
+            }
+            .slick-active{
+                button{
+                    background-color: var(--icontwo-color);
+                    transform: scale(1.2);
+                }
+            }
+        }
+        .slick-center{
+            .item{
+                background: tomato;
+                transform: scale(1.2);
+            }
+        }
+    }
 }
